--- a/popup.html
+++ b/popup.html
@@ -1,37 +1,24 @@
 <!doctype html>
-<!--
- This page is shown when the extension button is clicked, because the
- "browser_action" field in manifest.json contains the "default_popup" key with
- value "popup.html".
- -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>UMass Captcha Plugin</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
       }
       #status {
-        /* avoid an excessively wide status text */
         white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
       }
     </style>
-
-    <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
-     -->
-    <script src="popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
+	<div id="status">
+	<a target="_blank" href="https://mailsrv.cs.umass.edu/webmail/">UMass CS WebMail </a>
+	The captcha should be filled in the captcha box (approx 1 sec later)<br/>
+	Current Character prediction accuray 86.5% 
+	<i>Reload page if captcha incorrect </i>
+	</div>
   </body>
 </html>
 
