--- a/popup.html
+++ b/popup.html
@@ -9,16 +9,17 @@
       }
       #status {
         white-space: pre;
+		
       }
     </style>
   </head>
   <body>
-	<div id="status">
-	<a target="_blank" href="https://mailsrv.cs.umass.edu/webmail/">UMass CS WebMail </a>
-	The captcha should be filled in the captcha box (approx 1 sec later)<br/>
-	Current Character prediction accuray 86.5% 
-	<i>Reload page if captcha incorrect </i>
-	</div>
+<div id="status">
+<a target="_blank" href="https://mailsrv.cs.umass.edu/webmail/">UMass CS WebMail </a>
+<p>Once plugin is installed, each time the webmail page opens, 
+the captcha should be automatically filled in the captcha box</p>
+<i>Reload page if captcha filled is incorrect </i>
+</div>
   </body>
 </html>
 
